<?xml version="1.0"?>
<package format="2">
  <name>image_tools</name>
  <version>0.0.0</version>
  <description>Tools to capture and play back images to and from DDS subscriptions and publications.</description>
  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>libopencv-dev</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rmw_implementation</build_depend>
  <build_depend>sensor_interfaces</build_depend>
  <build_depend>std_interfaces</build_depend>

  <exec_depend>libopencv-dev</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rmw_implementation</exec_depend>
  <exec_depend>sensor_interfaces</exec_depend>
  <exec_depend>std_interfaces</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
